html refactor, added css animations for micro-interactions

--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -1,250 +1,193 @@
 @import 'variables';
 @import 'mixins';
 
+$boxed-width: 1200px;
 $button-size : 3.0rem;
 $transition: .3s; // increase this to see the transformations in slow-motion
+
 html, html a {
     -webkit-font-smoothing: antialiased;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
-#header {
-      @include desktop {
-          background: #F0F0F0;
-      }
-      &.sticky > div {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
-        //max-width: 1200px;
-        //margin: auto;
-        background: #F0F0F0;
-        z-index: 1;
-        margin-top: -50px;
-
-        .st0{fill:#FFFFFF;}
-        .st1{fill:#424242;}
-        .st2{fill:none;stroke:#5E6062;stroke-miterlimit:10;}
-        .st3{fill:#0DC0DC;}
-        .st4{fill:#9A9A9B;}
-        .st5{fill:#5E6062;}
-        .st6{fill-rule:evenodd;clip-rule:evenodd;fill:#E5E5E5;}
-        .st7{fill:#E5E5E5;}
-        .st8{fill:#F47641;}
-        .st9{opacity:0.88;fill:#F47641;}
-        .st10{fill:#FFBD3E;}
-        .st11{fill:#77AF42;}
-        .st12{fill:#F4D019;}
-        .st13{clip-path:url(#SVGID_2_);}
-        .st14{opacity:0.9;fill:#F47641;}
-        .st15{clip-path:url(#SVGID_5_);}
-        .st16{clip-path:url(#SVGID_7_);}
-        .st17{clip-path:url(#SVGID_8_);}
-        .st18{fill:#00246A;fill-opacity:0.2;}
-        .st19{opacity:0.6;fill:#0DC0DC;}
-        .st20{filter:url(#Adobe_OpacityMaskFilter);}
-        .st21{clip-path:url(#SVGID_12_);fill:url(#SVGID_14_);}
-        .st22{clip-path:url(#SVGID_12_);mask:url(#SVGID_13_);}
-        .st23{filter:url(#Adobe_OpacityMaskFilter_1_);}
-        .st24{clip-path:url(#SVGID_18_);fill:url(#SVGID_20_);}
-        .st25{clip-path:url(#SVGID_18_);mask:url(#SVGID_19_);}
-        .st26{fill:#F0F0F0;}
-        .st27{opacity:0.1;fill:#00246A;stroke:#231F20;stroke-miterlimit:10;}
-        .st28{opacity:0.1;fill:#00246A;}
-        .st29{clip-path:url(#SVGID_26_);fill:#222E65;}
-        .st30{clip-path:url(#SVGID_26_);fill:#FFFFFF;}
-        .st31{clip-path:url(#SVGID_26_);}
-        .st32{clip-path:url(#SVGID_28_);fill:#FFFFFF;}
-        .st33{clip-path:url(#SVGID_28_);fill:#F47640;}
-        .st34{fill:#0C9390;fill-opacity:0.9;}
-        .st35{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
-        .st36{fill:#00246A;}
-        .st37{fill:#222C65;}
-        .st38{fill:#F37640;}
-        .st39{fill:#0C9390;}
-        .st40{fill:none;}
-        .st41{opacity:0.2;fill:#E5E5E5;}
-        .st42{opacity:0.5;fill:none;stroke:#E5E5E5;}
-        .st43{fill:#555759;}
-        .st44{opacity:0.8;fill:#FFFFFF;fill-opacity:0.8;}
-        .st45{display:none;}
-        .st46{display:inline;}
-        .st47{opacity:0.1;fill:#E20613;}
-        .st48{fill:none;stroke:#00A651;stroke-width:0.1;}
-      }
-
-        svg * {
-          //fill: currentColor;
-          transition: fill 0.5s;
-
-        }
-
-      .stuck {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        //width: 100%;
-        //margin: auto;
-      }
+body {
+  width:100%;
+  height:100%;
 }
+
+.page-header > .skiptocontent {
+    a {
+        background-color: color(primary);
+        border-bottom-right-radius: 1rem;
+        clip: rect(0.1rem, 0.1rem, 0.1rem, 0.1rem);
+        color: color(neutral-lightest);
+        height: 0.1rem;
+        left: 0;
+        outline: 0;
+        position: absolute;
+        top: 0;
+        width: 0.1rem;
+
+        &:focus {
+            clip: auto;
+            font-size: 2rem;
+            height: auto;
+            padding: 0.5rem 1rem;
+            transition: top 0.1s ease-in, background 0.5s linear;
+            width: auto;
+        }
+    }
+}
+
+// .sticky {
+//   position: fixed;
+//   top: 0;
+//   z-index: 99;
+// }
+
+.container {
+  display: inherit;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+  max-width: $boxed-width;
+  flex-flow: row wrap;
+  flex: 1 100%;
+}
+
 .page-header {
-    overflow: hidden;
-    //transition: max-height 0.5s;
-
-    //transition: background 0.3s linear;
     display: flex;
-    flex-flow: row wrap;
-
-    max-width: 1200px;
-    margin: auto;
-    z-index: 99;
+    flex-flow: column;
+    //width: 100vw;
+    width: 100%;
+    height: 70px;
+    background: #fff;
+    overflow: hidden;
     position: fixed;
     top:0;
     left:0;
-    width: 100%;
-    background: #fff;
+    z-index: 100;
+    transition: all 0.5s 0.4s;
+
+    //ordering
+    .meta-nav { order: 2; }
+    .main-nav { order: 1; }
+
     @include desktop {
-        background: transparent;
-        position: relative;
+      //ordering
+      .meta-nav { order: 1; }
+      .main-nav { order: 2; }
     }
 
-
-    > .skiptocontent {
-        a {
-            background-color: color(primary);
-            border-bottom-right-radius: 1rem;
-            clip: rect(0.1rem, 0.1rem, 0.1rem, 0.1rem);
-            color: color(neutral-lightest);
-            height: 0.1rem;
-            left: 0;
-            outline: 0;
-            position: absolute;
-            top: 0;
-            width: 0.1rem;
-
-            &:focus {
-                clip: auto;
-                font-size: 2rem;
-                height: auto;
-                padding: 0.5rem 1rem;
-                transition: top 0.1s ease-in, background 0.5s linear;
-                width: auto;
-            }
-        }
-    }
-    .os-logo {
-      width: 176px;
-      height: 40px;
-      transition: all 0.3s linear;
-      svg * {
-        //fill: auto;
-        transition: fill 0.5s;
-
+    .nav-menu {
+      //opacity: 0;
+      .nav-menu-item {
+        margin: 1rem 0;
+        margin-left: -12000px;
+        transition: all 0.5s;
+        // &:nth-child(2) {
+        //   margin-left: -2300px;
+        // }
+        // &:nth-child(3) {
+        //   margin-left: -3400px;
+        // }
+        // &:nth-child(4) {
+        //   margin-left: -4500px;
+        // }
+        // &:nth-child(5) {
+        //   margin-left: -115600px;
+        // }
       }
-      @include desktop {
-        svg * {
-          fill: #fff;
-
-        }
-      }
-
     }
+
     .meta-nav {
-      //position:relative;
-      //top: -500px;
-      display: none;
-      order: 2;
-      flex: 1 100%;
-      padding: 1.9rem;
-      transition: all 0.3s linear;
-      @include desktop {
-        //top: auto;
-        order: 0;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: flex-end;
-        background: #F0F0F0;
-        padding: 0.9rem 1.9rem;
+
+      .nav-menu {
+        flex: 1 100%;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        a {color: #0DC0DC;}
+
       }
+
       .logo-wrapper {
-        //display:none;
-        padding-left: 1.9rem;
+        flex: 1 100%;
+        background: transparentize(#E5E5E5, 0.8);
+        padding: 1.5rem;
+        border-top: 1px solid transparentize(#E5E5E5, 0.5);
+        position: absolute;
+        bottom: -70px;
+        left: 0;
+        width: 100%;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+        transition: bottom 0.3s;
+        &::after {
+          content: "\00a9  Rice University";
+          color: #9A9A9B;
+          order: 2;
+        }
       }
     }
-    .logo-quote {
-      vertical-align: top;
-      line-height: 41px;
-      display: inline-block;
-      margin-left: 3rem;
-      color: #fff;
-      @include mobile {
+
+    .main-nav {
+      > .container {
+        display: flex;
+        justify-content: space-between;
+        padding: 1.5rem;
+      }
+
+      .logo-wrapper {
+          line-height: 0;
+          height: 100%;
+          order: 1;
+          > a {
+              display: inline-block;
+              width: 176px;
+              height: 40px;
+              transition: all 0.3s linear;
+          }
+          svg .st5 {
+            opacity: 1;
+            transition: opacity 0.5s;
+          }
+      }
+
+      .logo-quote {
         display: none;
       }
-    }
-    .nav {
-      order: 1;
-      flex: 1 100%;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: space-between;
-      padding: 1.9rem;
-      transition: all 1.2s;
-      top: auto;
 
-      .nav-menu-item a {
-        color: #fff;
-        font-weight: 600;
+      .os-logo {
+
       }
 
-    }
-    .nav-menu {
-      display: none;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      @include desktop {
-        display: flex;
-        flex-flow: row wrap;
-        flex: 0 auto;
-        align-items: center;
+      .nav-menu {
+        flex: 1 100%;
+        order: 3;
+        margin: 1.5rem 0 0;
+        padding: 0;
+        list-style: none;
+        transform: translateY(0%);
+        transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+        a {
+          color: #00246A;
+          font-size: 2.2rem;
+          font-weight: 600;
+        }
+        &.clone {
+          transform: translateY(-200%);
+          transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+          position:absolute;
+          right: 6rem;
+          top: 0;
+          height: 70px;
+          align-items: center;
+        }
       }
     }
-    @include desktop {
-    .nav-menu-item {
-        > a {
-            display: inline-block;
-            padding-left: 2rem;
-            padding-right: 2rem;
-            color: #555759;
-            &:active,
-            &:focus,
-            &:hover {
-                color: color(blue);
-            }
-        }
-        &:first-child > a {
-            margin-left: -2rem;
-        }
 
-        &:last-child > a {
-            margin-right: -2rem;
-        }
-    }
-  }
-    .logo-wrapper {
-        line-height: 0;
-        height: 100%;
-        > a {
-            display: inline-block;
-        }
-    }
-    .logo {
-      order: 1;
-        display: inline-block;
-    }
     .expand-nav {
       align-self: flex-start;
       margin-top: 10px;
@@ -308,83 +251,198 @@ html, html a {
       }
 
     }
-}
+  }
 @include mobile {
-.page-header.active {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width:100%;
-  height:100%;
-  overflow: auto;
-  background: #fff;
-  .os-logo {
-    //width: 65px;
+  body.active {
     overflow: hidden;
-
-    svg #Logo_2_1_ > g {
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
   }
-  .nav  {
-    // flex:0 0 100%;
-    // align-items: flex-start;
-    // align-content: flex-start;
+  .page-header.active {
+    right: 0;
+    bottom: 0;
+    width:100%;
+    height:100%;
+    background: #fff;
+    transition: all 0.5s;
+
+    .meta-nav {
+      //display: inherit;
+      .logo-wrapper {
+        bottom: 0;
+        transition: bottom 0.3s 0.6s;
+      }
+    }
+    .main-nav {
+      svg .st5 {
+        opacity: 0;
+        transition: opacity 0.5s;
+      }
+      svg #grey {
+        opacity: 1;
+      }
+      .nav-menu.clone {
+        transform: translateY(-300%);
+      }
+    }
     .nav-menu {
-       order: 3;
-       flex: 1 100%;
-       list-style: none;
-       margin: 0;
-       padding: 0;
-       display: flex;
-       flex-flow: column nowrap;
-       font-size: 2.2rem;
-       font-weight: 600;
-       a {color: #00246A;}
-     .nav-menu-item {
-       flex: 1 auto;
+      //display: flex;
+      //opacity: 1;
+      flex-flow: column nowrap;
+      .nav-menu-item {
+        margin-left: 0;
+        transition: all 0.5s 0.6s;
+        &:nth-child(2) {
+          transition: all 0.7s 0.7s;
+        }
+        &:nth-child(3) {
+          transition: all 0.8s 0.7s;
+        }
+        &:nth-child(4) {
+          transition: all 0.9s 0.7s;
+        }
+        &:nth-child(5) {
+          transition: all 1s 0.7s;
+        }
+      }
     }
   }
 }
-  .meta-nav {
-     display: flex;
-     order: 4;
-     flex-flow: row wrap;
-     .nav-menu {
-       list-style: none;
-       margin: 0;
-       padding: 0;
-       display: flex;
-       flex-flow: column wrap;
-       flex: 1 100%;
-       .nav-menu-item {
-         flex: 1 auto;
 
-       }
-       a {color: #0DC0DC;}
-     }
-     .logo-wrapper {
-       margin: -1.9rem;
-       flex: 1 100%;
-       align-self: flex-end;
-       background: transparentize(#E5E5E5, 0.8);
-       padding: 1.9rem;
-       border-top: 1px solid transparentize(#E5E5E5, 0.5);
-       display: flex;
-       flex-flow: row nowrap;
-       justify-content: space-between;
-       align-items: center;
-       &::after {
-         content: "\00a9  Rice University";
-         color: #9A9A9B;
-         order: 2;
-         //display: block;
-         //text-align: right;
-       }
-     }
-   }
-}
+//desktop sytles
+@include desktop {
+  .page-header {
+    height: 120px;
+    position: absolute;
+    top: auto;
+    left: auto;
+    background: transparent;
+    overflow: visible;
+
+    .meta-nav {
+      background: #F0F0F0;
+      height: 50px;
+
+      .container {
+        display: flex;
+        flex-direction: row nowrap;
+        justify-content: flex-end;
+        height: 100%;
+        align-items: center;
+      }
+      .nav-menu {
+        flex: 0 0 auto;
+        display: flex;
+      }
+      .logo-wrapper {
+        position: static;
+        left: auto;
+        bottom: auto;
+        background: transparent;
+        border: none;
+        width: auto;
+        flex: 0 0 auto;
+        padding: 0 0 0 2rem;
+        &::after {
+          display: none;
+        }
+      }
+    }
+    .main-nav {
+      overflow: hidden;
+
+      > .container {
+        align-items: center;
+        position: relative;
+      }
+      .logo-wrapper {
+        order: 1;
+      }
+      .nav-menu {
+        order: 2;
+        flex: 0 0 auto;
+        display: flex;
+        margin-top: 0px;
+        flex: 1 auto;
+        justify-content: flex-end;
+        .nav-menu-item {
+          margin: 0px;
+          > a {
+            color:#fff;
+            font-size: 1.8rem;
+          }
+        }
+      }
+    }
+    .nav-menu {
+      .nav-menu-item {
+        margin: 0px;
+        > a {
+          display: inline-block;
+          padding-left: 2rem;
+          padding-right: 2rem;
+          color: #555759;
+          &:active,
+          &:focus,
+          &:hover {
+              color: color(blue);
+          }
+        }
+        &:first-child > a {
+            margin-left: -2rem;
+        }
+
+        &:last-child > a {
+            margin-right: -2rem;
+        }
+      }
+    }
+      &.sticky {
+        .main-nav {
+        position: fixed;
+        top: -80px;
+        left: 0;
+        width: 100%;
+        transition: all 0.5s;
+        background: #fff;
+
+        .nav-menu .nav-menu-item > a {
+          color: #5E6062;
+        }
+        .expand-nav {
+          display:block;
+          order: 3;
+          margin-left: 2rem;
+        }
+      }
+      &.active {
+        .main-nav {
+          .nav-menu {
+            transform: translateY(200%);
+            transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+            &.clone {
+              transform: translateY(0%);
+              transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+
+            }
+          }
+        }
+      }
+    }
+      &.is-visible {
+        .main-nav {
+        top: 0px;
+        transition: top 0.5s 0.3s;
+      }
+    }
+    &:not(.sticky) {
+      .logo-wrapper {
+        svg .st5,
+        svg .st8,
+        svg .st12,
+        svg .st11,
+        svg .st36, {
+          fill: #fff!important;
+        }
+      }
+    }
+  }
 }
