adjusted all media queries's breakpoints. Added all styles for buckets section

--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -47,27 +47,27 @@
 			<div class="b-img"></div>
 			<div class="b-text">
 				<blockquote>“At first I was like, nope, and now I’m like, yep!”<br> &mdash; <cite>Juan C.</cite></blockquote>
-				<a href="" class="btn-small" title="learn more">learn more</a>
+				<a href="" class="btn btn-small" title="learn more">Read it</a>
 			</div>
 		</div>
-		
+
 		<div class="col">
 			<div class="b-text">
 				<p>Here is a place where some cool stuff happened. Check it out.</p>
-				<a href="" class="btn-small" title="learn more">learn more</a>
+				<a href="" class="btn btn-small" title="learn more">Read it</a>
 			</div>
-			<div class="b-img"></div>			
+			<div class="b-img"></div>
 		</div>
-		
+
 		<div class="col no-img">
 			<p>No picture, no big deal. Talking about how great something is. “It could be a testmonial from a teacher.”</p>
-			<a href="" class="btn-small" title="learn more">learn more</a>
-		</div>				
+			<a href="" class="btn btn-small" title="learn more">Read it</a>
+		</div>
 	</div>
 </div>
 
 <div class="banner-wrap">
 	<div class="container">
-		red			
+		red
 	</div>
 </div>
