--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -19,6 +19,12 @@
     };
 }
 
+.btn-small {
+    padding: .5rem .75rem;
+    background-color: color(orange);
+    color: white
+}
+
 .btn-large {
     padding: 2.5rem;
 }
