--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -47,14 +47,14 @@
 			<div class="b-img"></div>
 			<div class="b-text">
 				<blockquote>“At first I was like, nope, and now I’m like, yep!”<br> &mdash; <cite>Juan C.</cite></blockquote>
-				<a href="" class="btn btn-small" title="learn more">Read it</a>
+				<a href="" class="btn btn-small btn-secondary" title="learn more">Read it</a>
 			</div>
 		</div>
 
 		<div class="col">
 			<div class="b-text">
 				<p>Here is a place where some cool stuff happened. Check it out.</p>
-				<a href="" class="btn btn-small" title="learn more">Read it</a>
+				<a href="" class="btn btn-small btn-secondary" title="learn more">Read it</a>
 			</div>
 			<div class="b-img"></div>
 		</div>
