added education section

--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -40,7 +40,6 @@
     </main>
 </div>
 
-
 <div class="buckets-wrap">
 	<div class="container">
 		<div class="col">
@@ -61,13 +60,36 @@
 
 		<div class="col no-img">
 			<p>No picture, no big deal. Talking about how great something is. “It could be a testmonial from a teacher.”</p>
-			<a href="" class="btn btn-small" title="learn more">Read it</a>
+			<a href="" class="btn btn-small  btn-" title="learn more">Read it</a>
 		</div>
 	</div>
 </div>
 
-<div class="banner-wrap">
+<div class="br-education--wrap">
+	<div class="br-overlay visible-small"></div>
 	<div class="container">
-		red
+		<div class="square-1 hidden-small"></div>
+		<div class="square-2 hidden-small"></div>
+		<div class="square-3 br-text">
+			<p class="larger">When it comes to education,</p>
+			<h1>there should be no limits.</h1>
+			<p>Our hiqh-quality educational tools give students the access to the learning materials they need to succeed, at little to no cost. Because we don’t believe anything should come between students and their future.</p>
+		</div>
+		<div class="square-4 br-student"><!--img src="/images/home/br-student-bg.png" alt="female student holding books"/--></div>
+		<div class="br-ctas">
+			<div class="col">
+				<a href="" title="Higher Education">
+					<p class="larger">Higher Education</p>
+					<p>Free, peer-reviewed college textbooks</p>
+				</a>
+			</div>
+
+			<div class="col">
+				<a href="" title="K-12">
+					<p class="larger">K-12</p>
+					<p>Adaptive learning courseware and textbooks for AP® courses</p>
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
