--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -194,7 +194,7 @@
 	display: flex;
 	padding: 1rem 0;
 
-	@include medium-up {
+	@include large-up {
 		padding: 8rem 0;
     }
 
@@ -205,11 +205,7 @@
 		max-width: $boxed-width;
 		flex-flow: column nowrap;
 		justify-content: space-between;
-		@include medium {
-	        color: purple
-	    }
-
-		@include medium-up {
+		@include large-up {
 	        flex-flow: row wrap
 	    }
 
@@ -221,7 +217,7 @@
 			margin: .75rem 0;
 
 			&:not(:last-child) {
-				@include medium-up {
+				@include large-up {
 					flex-basis: 49%
 			    }
 				@include large {
@@ -230,7 +226,7 @@
 			}
 
 			&:last-child {
-				@include medium-up {
+				@include large-up {
 					flex-basis: 100%
 			    }
 				@include large {
@@ -289,7 +285,7 @@
 				padding: 3rem 4rem;
 				color: white;
 				background-color: color(secondary);
-				@include medium-up {
+				@include large-up {
 					padding: 1.5rem 4rem;
 			    }
 
@@ -309,7 +305,7 @@
 				position: relative;
 
 				blockquote {
-					margin: 1rem 0;
+					margin: 1rem 0 0;
 				}
 			}
 		}
@@ -317,6 +313,188 @@
 	}
 }
 
-.banner-wrap {
-	background: blue;
+// Banner Education
+
+.br-education--wrap {
+	position: relative;
+	display: flex;
+	flex-flow: column nowrap;
+	width: 100vw;
+	min-height: 75vh;
+	background-color: color(blue);
+	background-image:  url('/images/home/br-education-bg-sm.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	@include medium-up {
+		padding: 9rem 0;
+		background-image:  url('/images/home/br-education-bg-md.jpg');
+	}
+
+	@include large-up {
+		background-image:  url('/images/home/br-education-bg-lg.jpg');
+	}
+
+	.br-overlay {
+		position: absolute;
+		width: 100%;
+		min-height: 100%;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(color(cyan), .8)
+	}
+
+    .square-1,
+    .square-2{
+        position: absolute;
+    }
+
+    .square-1,
+    .square-2 {
+	    background-color: rgba(color(blue), 0.1);
+    }
+
+    .square-1 {
+	    width: 40vw;
+	    height: 8.751vw;
+	    bottom: 3.571vw;
+	    left: 14.571vw;
+    }
+
+    .square-2 {
+	    width: 45.714vw;
+	    height: 37.142vw;
+	    top: 2.857vw;
+	    right: 3.571vw;
+    }
+
+    .square-3 {
+	    position: relative;
+	    width: 100%;
+	    left: 0;
+	    padding: 4rem;
+
+	    @include medium-up {
+		    width: 45.714vw;
+		    left: 8.214vw;
+			background-color: rgba(color(cyan), 0.6);
+	    }
+
+	    @include large {
+		    padding-right: 18rem;
+	    }
+
+
+	    * {
+		    position: relative;
+	    }
+
+	    p {
+		    margin-bottom: 0;
+		    color: white
+	    }
+
+	    h1 {
+		    font-size: 6.9rem;
+		    font-weight: 700;
+		    line-height: .8;
+		    letter-spacing: -.3rem;
+		    color: color(yellow);
+
+		    @include medium-up {
+				font-size: 9vmin;
+				letter-spacing: -.6rem;
+		    }
+	    }
+
+	    p:not(.larger) {
+		    font-size: 1.8rem
+	    }
+    }
+
+    .square-4 {
+	    position: relative;
+	    width: 100vw;
+	    height: 80vw;
+	    bottom: 0;
+        right: 3rem;
+	    background-image: url('/images/home/br-student-bg.png');
+	    background-repeat: no-repeat;
+	    background-position: right bottom;
+	    background-size: contain;
+
+	    @include medium-up {
+			position: absolute;
+			right: 0;
+			background-position: left bottom;
+			width: 65.357vw;
+			height: 100%;
+
+	    }
+    }
+
+	.br-ctas {
+		position: relative;
+		display: flex;
+		flex-flow: column nowrap;
+		max-width: 77rem;
+		margin: 0 auto;
+		justify-content: space-between;
+
+		@include medium-up {
+			flex-flow: row nowrap;
+			padding: 2rem 1rem;
+		}
+
+		.col {
+			position: relative;
+			width: 100%;
+			color: white;
+			box-shadow: 0 0 3px rgba(neutral-color(dark), .5);
+			transition: all 200ms ease-in-out;
+
+			@include medium-up {
+				width: 48%;
+			}
+
+			&:hover {
+				transform: scale(1.05);
+			}
+
+			a {
+				width: 100%;
+				display: block;
+				padding: 2rem;
+			}
+
+			&:first-child {
+				background-color: color(cyan);
+
+				.larger {
+					color: color(yellow)
+				}
+			}
+
+			&:last-child {
+				background-color: color(gold);
+
+				.larger {
+					color: color(orange)
+				}
+			}
+
+			.larger {
+				margin-bottom: 0;
+				font-weight: 700;
+			}
+
+			p {
+				margin-top: .5rem;
+				color: white;
+			}
+		}
+	}
+
 }
