--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -3,6 +3,7 @@ $os-colors: (
     red: rgb(196, 35, 55),
     orange: rgb(226, 111, 74),
     yellow: rgb(239, 202, 63),
+    gold: rgb(255, 189, 62),
     green: rgb(115, 165, 72),
     turqoise: rgb(45, 151, 147),
     cyan: rgb(47, 192, 219),
