add max-width on eduction container wrap

--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -70,10 +70,12 @@
 	<div class="container">
 		<div class="square-1 hidden-small"></div>
 		<div class="square-2 hidden-small"></div>
-		<div class="square-3 br-text">
-			<p class="larger">When it comes to education,</p>
-			<h1>there should be no limits.</h1>
-			<p>Our hiqh-quality educational tools give students the access to the learning materials they need to succeed, at little to no cost. Because we don’t believe anything should come between students and their future.</p>
+		<div class="br-text--wrap">
+			<div class="br-text">
+				<p class="larger">When it comes to education,</p>
+				<h1>there should be no limits.</h1>
+				<p>Our hiqh-quality educational tools give students the access to the learning materials they need to succeed, at little to no cost. Because we don’t believe anything should come between students and their future.</p>
+			</div>
 		</div>
 		<div class="square-4 br-student"><!--img src="/images/home/br-student-bg.png" alt="female student holding books"/--></div>
 		<div class="br-ctas">
