Add complimentary copy form
Just the basic form layout

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -112,8 +112,7 @@
     </label>
     <label>
         <span>Email address</span>
-        <input name="adoption[hint_email_address]" type="email"
-         pattern="[^@]+@([^@\.]+\.)+[^@\.]+">
+        <input name="adoption[hint_email_address]" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text">
     </label>
     <label>
         <span>Phone number</span>
