--- a/src/app/pages/adoption-form/adoption-form.scss
+++ b/src/app/pages/adoption-form/adoption-form.scss
@@ -1,13 +1,12 @@
 @import 'variables';
 
-[type="submit"] {
-    background-color: color(primary);
-    color: color(neutral-lightest);
-    font-size: 1.5rem;
-    padding: 0.5rem 1rem;
-}
-
 fieldset {
+    border-color: neutral-color(lightest);
+
+    legend {
+        background-color: neutral-color(lightest);
+    }
+
     &.invalid,
     input:invalid,
     select:invalid {
@@ -42,9 +41,7 @@ fieldset {
     }
 
     &.invalid > .validation-message {
-        background-color: color(neutral-lightest);
         color: color(danger);
         display: block;
     }
-
 }
