--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,6 +53,10 @@ a {
     width: 0.1rem;
 }
 
+.hidden {
+    display: none;
+}
+
 #main {
     animation: fadeIn ease-in 1;
     animation-delay: 0.2s;
@@ -86,4 +90,3 @@ a {
 @import 'components/headers';
 @import 'components/responsive';
 @import 'components/social';
-@import 'components/forms';
