fixed flex-basis bug for Buckets section on iPhone display

--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -77,7 +77,7 @@
 				<p>Our hiqh-quality educational tools give students the access to the learning materials they need to succeed, at little to no cost. Because we don’t believe anything should come between students and their future.</p>
 			</div>
 		</div>
-		<div class="square-4 br-student"><!--img src="/images/home/br-student-bg.png" alt="female student holding books"/--></div>
+		<div class="square-4 br-student"></div>
 		<div class="br-ctas">
 			<div class="col">
 				<a href="" title="Higher Education">
