Update licensing link

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -5,7 +5,7 @@
     <div class="copyright">
         <ul>
             <li>
-                <a href="/licensing">Licensing</a>
+                <a href="/license">Licensing</a>
             </li>
             <li>
                 <a href="/tos">Terms of Use</a>
