--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -31,6 +31,7 @@
             position: absolute;
             top: 0;
             width: 0.1rem;
+            z-index: 1;
 
             &:focus {
                 clip: auto;
